增加搜索页面

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 <h1>Python 包管理工具</h1>
 
     <div>
-        <a href="install.html" style="color: #d9534f; text-decoration: none;">安装第三方库</a>
+        <a href="search" style="color: #d9534f; text-decoration: none;">安装第三方库</a>
     </div>
     <br>
     <h1>已安装的包</h1>
