--- a/pipui/templates/index.html
+++ b/pipui/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Python 包管理工具</title>
+
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -130,11 +132,21 @@
             margin-top: 20px; /* 增加表格的上边距 */
         }
 
+        .interpreter-info span {
+            display: block; /* 每行单独显示 */
+            margin-top: 5px; /* 行间距 */
+            color: #959191; /* 维持灰色风格 */
+        }
+
+
     </style>
 </head>
 <body>
 <div class="header">
     <h1>Python 包管理工具</h1>
+    <div id="interpreter-info">
+        <!-- 解释器信息将在这里填充 -->
+    </div>
 </div>
 
 <div class="main">
@@ -256,16 +268,16 @@
     }
 
     function renderSearchResults(data) {
-    const resultsContainer = document.getElementById('search-results');
-    resultsContainer.innerHTML = ''; // 清空之前的结果
+        const resultsContainer = document.getElementById('search-results');
+        resultsContainer.innerHTML = ''; // 清空之前的结果
 
-    if (data.length === 0) {
-        resultsContainer.innerHTML = '<p>未找到结果。</p>';
-        return;
-    }
+        if (data.length === 0) {
+            resultsContainer.innerHTML = '<p>未找到结果。</p>';
+            return;
+        }
 
-    const resultTable = document.createElement('table');
-    resultTable.innerHTML = `
+        const resultTable = document.createElement('table');
+        resultTable.innerHTML = `
         <thead>
             <tr>
                 <th>名称</th>
@@ -276,19 +288,19 @@
         <tbody>
     `;
 
-    data.forEach(package => {
-        resultTable.innerHTML += `
+        data.forEach(package => {
+            resultTable.innerHTML += `
             <tr>
                 <td>${package.name}</td>
                 <td>${package.version}</td> <!-- 显示版本号 -->
                 <td><button onclick="install('${package.name}')">安装</button></td>
             </tr>
         `;
-    });
+        });
 
     resultTable.innerHTML += `</tbody></table>`;
     resultsContainer.appendChild(resultTable);
-}
+    }
 
 
     function install(packageName) {
@@ -304,6 +316,23 @@
             }
         });
     }
+
+    document.addEventListener("DOMContentLoaded", function () {
+        fetch('/interpreter-info')
+            .then(response => response.json())
+            .then(data => {
+                const infoDiv = document.getElementById('interpreter-info');
+                infoDiv.innerHTML = `
+<!--                <strong>当前解释器信息:</strong><br>-->
+                <span>版本号: ${data.version}</span><br>
+                <span>路径: ${data.path}</span>
+            `;
+            })
+            .catch(error => {
+                console.error('获取解释器信息失败:', error);
+            });
+    });
+
 </script>
 </body>
 </html>
