--- a/pipui/templates/index.html
+++ b/pipui/templates/index.html
@@ -324,8 +324,8 @@
                 const infoDiv = document.getElementById('interpreter-info');
                 infoDiv.innerHTML = `
 <!--                <strong>当前解释器信息:</strong><br>-->
-                <span>版本号: ${data.version}</span><br>
-                <span>路径: ${data.path}</span>
+                <span>Python Version: ${data.version}</span><br>
+                <span>Python Path: ${data.path}</span>
             `;
             })
             .catch(error => {
